--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 										<ul class="social-icons social-icons-dark-2 social-icons-big">
 											<li class="social-icons-yelp"><a href="https://www.yelp.ca/biz/roll-n-tea-richmond-hill" target="_blank" title="Yelp"><i class="fab fa-yelp"></i></a></li>
 											<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-											<li class="social-icons-uber"><a href="https://www.ubereats.com/ca/toronto/food-delivery/roll-n-tea/rJTyz6mAQVqLxuiHd37Q9Q" target="_blank" title="UberEats"><i class="fab fa-uber"></i></a></li>
+											<li class="social-icons-uber"><a href="https://www.ubereats.com/ca/store/roll-n-tea/6odKlACHWDmYMkSQG0qFlw" target="_blank" title="UberEats"><i class="fab fa-uber"></i></a></li>
 										</ul>
 									</div>
 									
@@ -584,7 +584,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.2 | <span class="custom-tertiary-font">L $</span> 4.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.2, <span class="custom-tertiary-font">L $</span> 4.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
@@ -594,7 +594,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4 | <span class="custom-tertiary-font">L $</span> 4.5</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4, <span class="custom-tertiary-font">L $</span> 4.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
@@ -604,7 +604,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.7 | <span class="custom-tertiary-font">L $</span> 5.2</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.7, <span class="custom-tertiary-font">L $</span> 5.2</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
@@ -618,7 +618,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Injeolmi Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9, <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with injeolmi (Korean sweet rice cake) topping.</p>
@@ -628,7 +628,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Strawberry Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10, <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with strawberry topping.</p>
@@ -638,7 +638,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Mango Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9, <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with mango topping.</p>
@@ -648,7 +648,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Green Tea Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10, <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with green tea topping.</p>
@@ -658,7 +658,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Red Bean Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10, <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with red bean topping.</p>
@@ -668,7 +668,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Oreo Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9, <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with Oreo topping.</p>
@@ -678,7 +678,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Taro Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10, <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with taro topping.</p>
@@ -688,7 +688,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Cheesecake Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10, <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with cheesecake topping.</p>
@@ -702,7 +702,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fresh Lemon Green Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 5.2 | <span class="custom-tertiary-font">L $</span> 5.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 5.2, <span class="custom-tertiary-font">L $</span> 5.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Passionfruit, Litchi, Green Apple, Grapefruit.</p>
@@ -712,7 +712,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Slush</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.9 | <span class="custom-tertiary-font">L $</span> 5.4</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.9, <span class="custom-tertiary-font">L $</span> 5.4</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Pineapple, Passionfruit, Honeydew, Grape, Blueberry, Yogurt, Strawberry, Matcha, Peach, Taro, Litchi.</p>
@@ -722,7 +722,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Real Fruit Smoothie</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 6 | <span class="custom-tertiary-font">L $</span> 7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 6, <span class="custom-tertiary-font">L $</span> 7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Strawberry, Mango, Strawberry Banana, Avocado.</p>
@@ -1271,7 +1271,7 @@
 							<ul class="social-icons social-icons-clean social-icons-icon-light">
 								<li class="social-icons-yelp"><a href="https://www.yelp.ca/biz/roll-n-tea-richmond-hill" target="_blank" title="Yelp"><i class="fab fa-yelp"></i></a></li>
 								<li class="social-icons-instagram"><a href="https://www.instagram.com/roll_n_tea/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-								<li class="social-icons-uber"><a href="https://www.ubereats.com/ca/toronto/food-delivery/roll-n-tea/rJTyz6mAQVqLxuiHd37Q9Q" target="_blank" title="UberEats"><i class="fab fa-uber"></i></a></li>
+								<li class="social-icons-uber"><a href="https://www.ubereats.com/ca/store/roll-n-tea/6odKlACHWDmYMkSQG0qFlw" target="_blank" title="UberEats"><i class="fab fa-uber"></i></a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 text-center">
