--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9, <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Korean shaved ice dessert with injeolmi (Korean sweet rice cake) topping.</p>
+										<p>Korean shaved ice dessert with injeolmi topping.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
