--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#contact">Contact</a>
 										</li>
 										<li class="dropdown order-7">
-											<a class="dropdown-item" data-hash data-hash-offset="92" href="#location">Location</a>
+											<a class="dropdown-item" data-hash data-hash-offset="92" href="#location">Map</a>
 										</li>
 										<li class="align-items-center d-none d-lg-flex order-4 px-5 mx-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">
 											<span class="header-logo">
