--- a/index.html
+++ b/index.html
@@ -567,10 +567,11 @@
 								<div class="portf-filter text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
 									<ul class="list-unstyled ul-filter">
 										<li data-filter="*" class="active_filter">all</li>
-										<li data-filter=".rolls">gimbap</li>
+										<li data-filter=".rolls">rolls</li>
 										<li data-filter=".bingsu">bingsu</li>
 										<li data-filter=".tea">tea</li>
 										<li data-filter=".meals">meals</li>
+										<li data-filter=".appetizers">appetizers</li>
 										<li data-filter=".combos">combos</li>
 									</ul>
 								</div>
@@ -744,7 +745,7 @@
 							<div class="col-md-6 rolls">
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Gimbap</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.49</strong></div>
 									</div>
@@ -754,7 +755,7 @@
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Cheese Gimbap</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Cheese Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6.49</strong></div>
 									</div>
@@ -764,7 +765,7 @@
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tuna Gimbap</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tuna Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>6.99</strong></div>
 									</div>
@@ -774,7 +775,7 @@
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Gimbap</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 7.49</strong></div>
 									</div>
@@ -784,7 +785,7 @@
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tempura Shrimp Gimbap</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tempura Shrimp Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 7.49</strong></div>
 									</div>
@@ -860,6 +861,43 @@
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Bulgogi beef, lettuce, cheese, served on a bun.
+										</p>
+									</div>
+								</div>
+							</div>
+
+							<!-- APPETIZERS MENU ITEMS -->
+							<div class="col-md-6 appetizers">
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Dog</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.99</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Bulgogi beef, lettuce, cheese, served on a bun.
+										</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Ramen</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.49</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>
+										</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Miso Soup</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 1.99</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>
 										</p>
 									</div>
 								</div>
