--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.2, <span class="custom-tertiary-font">L $</span> 4.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.0, <span class="custom-tertiary-font">L $</span> 4.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
@@ -595,7 +595,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4, <span class="custom-tertiary-font">L $</span> 4.5</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 3.8, <span class="custom-tertiary-font">L $</span> 4.3</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
@@ -605,7 +605,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.7, <span class="custom-tertiary-font">L $</span> 5.2</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.5, <span class="custom-tertiary-font">L $</span> 5.0</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
@@ -639,7 +639,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Mango Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9, <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10, <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Korean shaved ice dessert with mango topping.</p>
@@ -703,7 +703,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fresh Lemon Green Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 5.2, <span class="custom-tertiary-font">L $</span> 5.7</strong></div>
+										<div class="custom-menu-item-price">< class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">L $</span> 5.2</div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Passionfruit, Litchi, Green Apple, Grapefruit.</p>
@@ -713,7 +713,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Slush</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.9, <span class="custom-tertiary-font">L $</span> 5.4</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.7, <span class="custom-tertiary-font">L $</span> 5.2</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Pineapple, Passionfruit, Honeydew, Grape, Blueberry, Yogurt, Strawberry, Matcha, Peach, Taro, Litchi.</p>
@@ -723,7 +723,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Real Fruit Smoothie</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 6, <span class="custom-tertiary-font">L $</span> 7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 5.8, <span class="custom-tertiary-font">L $</span> 6.8</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Strawberry, Mango, Strawberry Banana, Avocado.</p>
@@ -747,7 +747,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.49</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Rice, carrot, egg, pickled radish, braised burdock roots, crab meat, cucumber, fish cake.</p>
@@ -757,7 +757,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Cheese Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6.49</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Rice, cheddar cheese, carrot, egg, pickled radish, crab meat, cucumber, fish cake.</p>
@@ -767,7 +767,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tuna Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>6.99</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>5.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Rice, tuna, egg, pickled radish, crab meat, cucumber.</p>
@@ -777,7 +777,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 7.49</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Rice, bulgogi (beef), egg, pickled radish, crab meat, cucumber.</p>
@@ -787,7 +787,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tempura Shrimp Rolls</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 7.49</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Rice, tempura shrimp, egg, pickled radish, crab meat, cucumber, fish cake.</p>
@@ -811,7 +811,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Bento</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 10.49</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Served with bulgogi beef, rice, corn salad, lettuce salad, and dumplings.</p>
@@ -895,6 +895,17 @@
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Miso Soup</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 1.99</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>
+										</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Jamaican Patty</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 2.49</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>
