--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">10066 Bayview Ave #8,<br>Richmond Hill, ON L4C 0W5
-									<br>Holiday hours may vary.<br>Good Friday and Easter Monday: Open 12pm-7pm.
+									<br>Holiday hours may vary.<br>Good Friday / Easter Monday: 12pm-7pm.
 									</p>
 									<!--
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Don't want to wait in line? Order through our online menu to save time. Pickup and pay <b>at the counter.</b></p>
